# euler

./: Cargo.toml  README.md
src/: main.rs
src/aptos/: cmd.rs  utils.rs
src/faucet/: _type.rs  aptos.rs  kaia.rs  klaytn.rs  mod.rs  solana.rs  sui.rs
src/sui/: cmd.rs  mod.rs  utils.rs
