[package]
name = "euler"
description = "Rust toolbox for blockchain."
version = "0.1.0"
edition = "2021"
authors = ["Mulander King<mulander_j@outlook.com>"]


[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1", features = ["full"] }