[package]
name = "eulerr"
version = "1.0.1"
edition = "2021"
description = "Rust toolbox for blockchain."
keywords = ["cli", "aptos"]
categories = ["command-line-utilities"]
authors = ["Mulander King <mulander_j@outlook.com>"]
repository = "https://github.com/Mulander-J/eulerr"
homepage = "https://github.com/Mulander-J/eulerr"
readme = "README.md"
license = "MIT OR Apache-2.0"


[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = {  version = "1.0.114"}