[package]
name = "eulerr"
version = "1.2.0"
edition = "2021"
description = "Repeatedly faucet for blockchain."
keywords = ["cli", "faucet", "aptos", "sui", "klaytn"]
categories = ["command-line-utilities"]
authors = ["Mulander King <mulander_j@outlook.com>"]
repository = "https://github.com/Mulander-J/eulerr"
homepage = "https://github.com/Mulander-J/eulerr"
readme = "README.md"
license = "MIT OR Apache-2.0"


[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
ethers = { version = "2.0" }
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = {  version = "1.0.114"}
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.91"